# Automated_Email_GenrationTool

./: .gitignore  chains.py  langchain_helper.py  main.py  portfolio.py  pyproject.toml  pythonMain.py  requirements.txt
.streamlit/: config.toml
resources/: my_portfolio.csv
