[project]
name = "email-genrator-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.14",
    "langchain==0.3.14",
    "langchain-groq==0.2.3",
    "unstructured==0.14.6",
    "selenium==4.21.0",
    "chromadb==0.5.0",
    "streamlit==1.35.0",
    "pandas==2.0.2",
    "python-dotenv==1.0.0"
]
